[project]
name = "honey-pot-buildathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deep-translator>=1.11.4",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "ollama>=0.6.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "uvicorn[standard]==0.32.0",
]
